[project]
name = "Sudoku_Solver"
authors = [{name = "Kris Cheng", email = "pscheng59@gmail.com"}]
version = "1.0.0"
description = "Building a Sudoku solver as a mini project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.25.2",
    "pandas>=2.2.1",
    "more-itertools>=10.8.0",
]

[project.optional-dependencies]
dev = [
    "uv>=0.10.0",
]
ui_user = [
    "streamlit>=1.41.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"